# DataScience

./: .gitattributes  .gitignore  README.md  requirements.txt
Amerika/: hypo_test.R
Amerika/cv1/: notes.md
Amerika/cv10/: rozsah _vyberu.R  testovani_hypotez.R
Amerika/cv2/: 2.R  notes.md
Amerika/cv3/: distribucniFCE.R  notes.md
Amerika/cv4/: distribucniFCE.R  excelFun.R  spojitaNahodnaVelicina.R
Amerika/cv5/: gaming.R
Amerika/cv6/: notes.md
Amerika/cv7/: cv.R  cv2.R  cv4.R  cv5.R
Amerika/cv8/: centralni_limitniveta.md
Amerika/cv9/: chi_kvadrat.R  fisher_schnedecoro.R  notes.md  teorie_odhadu.R  teorie_odhadu2.R
BC/USA/: cv12.ipynb  cv2.ipynb  cv4.ipynb  cv6_5.ipynb
BC/apmo/: matlab_semestral.m  semestral.ipynb
BC/big_data2/: json_fixer.py
BC/msd/: PossionLME.ipynb  susbus.py  test_prep.py
BC/plain_python/: info.md
BC/usu/: USU_01_INTRO_CZ.ipynb  USU_03_LR_SGD_CZ.ipynb  USU_06_BLR_CZ.ipynb  USU_07_SOFTMAX_CZ.ipynb  USU_10_NN_CZ_new_version.ipynb  vsu.py
DAI/: temperovane_ladeni.ipynb  uvod.md
ING/: todo.md
ING/AMPI/: hratky_s_determinanty.py  lin_rovnice.py  vlastni_cisla.py
ING/ANV/: spanek
ING/DIM/: GCD_stuff.py
ING/PMR/: core_g2p_cz.py  info1
ING/PZR/: denouza.py  denouza2.py  pom.py  pom2.py
ING/PZR/semestral/: CMakeLists.txt  install_deps.sh
ING/PZR/semestral/src/: main.cpp
ING/PZR/semestral/src/lib/: CMakeLists.txt  TulAudioLib.hpp
ING/PZR/semestral/src/lib/audio_xtraction/: detect_word_boundaries.c  helper_funcs.c
ING/PZR/semestral/src/view/: CMakeLists.txt
ING/PZR/semestral/src/view/chart_plot/: PlotAudio.cpp  PlotAudio.hpp
ING/RDB/: Zkouska_RDB_13.06.2023.txt  info  info2.txt  zk 2014-spanek.txt
ING/TAS/: pr1.md  prd2.md  prd3.md  prd5.md
ING/ppj/: zkouska.ipynb
PZR/cv1/: README.md  record.sh  time_to_speech.ipynb  time_to_speech.py
PZR/cv2/: info_k_dalsi_uloze
PZS/cv1/: basic_info.txt  simple.ipynb
PZS/cv2/: info.txt
TGHE/cv2/: notes.md
USA/: cv1.ipynb  cv10.ipynb  cv14.ipynb  cv3.ipynb  cv6.ipynb  cv7.ipynb
apmo/: trial.py
big_data/: info.md  notes.md
big_data/cv10/: cv
big_data/cv11/: cv11v2.py  message_db.csv
big_data/cv2/: 2ndCv.sql  hratkySRedisem.py
big_data/cv3/: factorize.py  get_words.py  main.py
big_data/cv4/: mongo_stuff.js
big_data/cv5/: cv.py
big_data/cv6/: cv06.py
big_data/cv7/: elastic  kibana.py
big_data/cv9/: cv9.py
big_data2/: idnes_web_scraper.py  json_verifier.py
big_data2/cv2/: analyzer.py  bruh.json
big_data2/cv3/: idnes_stats.py  load_data.py
big_data2/cv3_elasticc/: idnes_diagnostics.py  load_data.py
big_data2/cv4/: idnes.py  idnes_merger.py  (+2 more)
msd/: PossionLME.ipynb  RIRidentification.mat  lti_system_id.py  monte_carlo_odhad_modelu.py  monty_hall.ipynb  test.py  zkouska_bruh.py
multimedia/: main.py  requirements.txt  teorie.txt
teorie gamingu/: Semestral_sus_verze.cs
teorie gamingu/TGHE_semestral/: CMakeLists.txt  heapq possible impl
teorie gamingu/TGHE_semestral/src/: main.c
teorie gamingu/TGHE_semestral/src/include/: app.h  dictionary.h  dijkstra_solver.h  dijkstra_tools.h  general_tools.h  matrix_tools.h  most_reliable_way_finding_app.h  test_tools.h
teorie gamingu/TGHE_semestral/src/libs/: app.c  dictionary.c  dijkstra_solver.c  general_tools.c  matrix_tools.c  most_reliable_way_finding_app.c  test_tools.c
teorie gamingu/TGHE_semestral/src/unit_tests/: basic_tests.c  basic_tests.h  dijkstra_tests.c  dijkstra_tests.h  matrix_tests.c  matrix_tests.h  tester.c  tester.h
usu/: USU_02_LR_LSE_CZ.ipynb  USU_03_LR_SGD_CZ.ipynb  USU_04_KNN_CZ.ipynb  USU_06_BLR_CZ.ipynb  USU_07_SOFTMAX_CZ.ipynb  USU_08_SVM_CZ.ipynb  USU_10_NN_CZ.ipynb  USU_11_BC_CZ.ipynb  notes.md  test1.ipynb  test_softmax.py  usu.py
(+350 files in other folders)
